[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/Hind_Siliguri/HindSiliguri-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Sheet/Forbidden_Lands/Roll_Tests.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.290344, 0.405994, 0.554688, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=2]
size = 25
outline_color = Color( 0.392157, 0.380392, 0.380392, 1 )
use_filter = true
font_data = ExtResource( 1 )

[node name="Panel" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -170.5
margin_right = 140.0
margin_bottom = 170.5
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 8.0
alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 7.0
margin_right = 280.0
margin_bottom = 27.0
mouse_filter = 0

[node name="Container6" type="Container" parent="VBoxContainer/VBoxContainer2"]
visible = false
margin_right = 280.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer2"]
margin_right = 280.0
margin_bottom = 20.0

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_right = 243.0
margin_bottom = 20.0
mouse_default_cursor_shape = 13
size_flags_horizontal = 3
color = Color( 1, 1, 1, 0 )

[node name="Container5" type="Container" parent="VBoxContainer/VBoxContainer2/HBoxContainer"]
visible = false
margin_left = 4.0
margin_right = 243.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
mouse_default_cursor_shape = 13
size_flags_horizontal = 3

[node name="Exit" type="Button" parent="VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 247.0
margin_right = 266.0
margin_bottom = 20.0
mouse_filter = 1
size_flags_horizontal = 0
text = "x"

[node name="Container" type="Container" parent="VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 270.0
margin_right = 280.0
margin_bottom = 20.0
rect_min_size = Vector2( 10, 0 )

[node name="Container2" type="Container" parent="VBoxContainer"]
visible = false
margin_top = 29.0
margin_right = 280.0
margin_bottom = 29.0
size_flags_vertical = 0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 31.0
margin_right = 280.0
margin_bottom = 72.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "Strength"
align = 1
valign = 1

[node name="Container" type="Container" parent="VBoxContainer"]
visible = false
margin_top = 69.0
margin_right = 280.0
margin_bottom = 85.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 76.0
margin_right = 280.0
margin_bottom = 280.0

[node name="Attribut" type="VBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_right = 280.0
margin_bottom = 32.0

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/Attribut"]
margin_right = 280.0
margin_bottom = 14.0
text = "Attribute"
align = 1
valign = 1

[node name="Label2" type="Label" parent="VBoxContainer/VBoxContainer/Attribut"]
margin_top = 18.0
margin_right = 280.0
margin_bottom = 32.0
size_flags_vertical = 7
text = "0"
align = 1
valign = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 280.0
margin_bottom = 50.0
size_flags_vertical = 7
text = "+"
align = 1
valign = 2

[node name="Skill" type="VBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 280.0
margin_bottom = 86.0

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/Skill"]
margin_right = 280.0
margin_bottom = 14.0
text = "Skill"
align = 1
valign = 1

[node name="Label2" type="Label" parent="VBoxContainer/VBoxContainer/Skill"]
margin_top = 18.0
margin_right = 280.0
margin_bottom = 32.0
size_flags_vertical = 7
text = "0"
align = 1
valign = 2

[node name="Label2" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 280.0
margin_bottom = 104.0
size_flags_vertical = 7
text = "+"
align = 1
valign = 2

[node name="Mods" type="VBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 280.0
margin_bottom = 140.0

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/Mods"]
margin_right = 280.0
margin_bottom = 14.0
text = "Mod"
align = 1
valign = 1

[node name="Label2" type="Label" parent="VBoxContainer/VBoxContainer/Mods"]
margin_top = 18.0
margin_right = 280.0
margin_bottom = 32.0
size_flags_vertical = 7
text = "2"
align = 1
valign = 2

[node name="Label3" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_top = 144.0
margin_right = 280.0
margin_bottom = 158.0
size_flags_vertical = 7
text = "+"
align = 1
valign = 2

[node name="Others" type="VBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 162.0
margin_right = 280.0
margin_bottom = 204.0
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/Others"]
margin_right = 280.0
margin_bottom = 14.0
text = "Others"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/VBoxContainer/Others"]
margin_top = 18.0
margin_right = 280.0
margin_bottom = 42.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer/Others/CenterContainer"]
margin_left = 96.0
margin_right = 184.0
margin_bottom = 24.0

[node name="Container" type="Container" parent="VBoxContainer/VBoxContainer/Others/CenterContainer/HBoxContainer"]
margin_right = 10.0
margin_bottom = 24.0
rect_min_size = Vector2( 10, 0 )

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/VBoxContainer/Others/CenterContainer/HBoxContainer"]
margin_left = 14.0
margin_right = 88.0
margin_bottom = 24.0
size_flags_horizontal = 0
align = 1

[node name="Container3" type="Container" parent="VBoxContainer"]
margin_top = 284.0
margin_right = 280.0
margin_bottom = 294.0
rect_min_size = Vector2( 0, 10 )

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 298.0
margin_right = 280.0
margin_bottom = 328.0

[node name="Roll_Dice" type="Button" parent="VBoxContainer/CenterContainer"]
margin_left = 90.0
margin_right = 190.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 30 )
size_flags_horizontal = 0
text = "Roll"

[node name="Container4" type="Container" parent="VBoxContainer"]
margin_top = 332.0
margin_right = 280.0
margin_bottom = 342.0
rect_min_size = Vector2( 0, 10 )

[connection signal="mouse_entered" from="VBoxContainer/VBoxContainer2/HBoxContainer/ColorRect" to="." method="_on_ColorRect_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/VBoxContainer2/HBoxContainer/ColorRect" to="." method="_on_ColorRect_mouse_exited"]
[connection signal="button_up" from="VBoxContainer/VBoxContainer2/HBoxContainer/Exit" to="." method="_on_Exit_button_up"]
[connection signal="button_up" from="VBoxContainer/CenterContainer/Roll_Dice" to="." method="_on_Roll_Dice_button_up"]
